# qt-web

./: .gitignore  LICENSE  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/bible/: global.css  page.tsx
app/dev/: page.tsx
app/logo-image/: route.ts
app/notes/: page.tsx
app/plan/: page.tsx
assets/icons/: about.txt  site.webmanifest
bible/: list.json
bible/CUT/: full.json
bible/CUV/: 1Chr.json  1Cor.json  1Jn.json  1Ki.json  1Pet.json  1Sm.json  1Th.json  1Tim.json  2Chr.json  2Cor.json  2Jn.json  2Ki.json  2Pet.json  2Sm.json  2Th.json  2Tim.json  3Jn.json  Acts.json  Amos.json  Col.json  Dan.json  Deu.json  Eccl.json  Eph.json  Est.json  Exo.json  Eze.json  Ezra.json  Gal.json  Ge.json  Hab.json  Hag.json  Heb.json  Hos.json  Isa.json  Jas.json  Jdgs.json  Jer.json  Job.json  Joel.json  (+27 more)
bible/KJV/: 1Chr.json  1Cor.json  1Jn.json  1Ki.json  1Pet.json  1Sm.json  1Th.json  1Tim.json  2Chr.json  2Cor.json  2Jn.json  2Ki.json  2Pet.json  2Sm.json  2Th.json  2Tim.json  3Jn.json  Acts.json  Amos.json  Col.json  Dan.json  Deu.json  Eccl.json  Eph.json  Est.json  Exo.json  (+40 more)
docs/: README_en.md
lib/: disk.ts  editorjs-config.ts  qt-big-image.tsx  quill-options.ts  rust-api-wrapper.ts  rust-api.ts  storage.ts  type-checker.ts  type.d.ts  utilites.ts
localize/: en.json  list.json  zh-TC.json  zh-TW.json
qt-rust/: Cargo.toml
qt-rust/full-json-bible/: CUT-version.json
qt-rust/src/: main.rs  main.use.rs  proc_bible.rs  slice_bible.rs  type_def.rs  wasm_lib.rs
test/: custom-plan.json
(+36 files in other folders)
