[package]
name = "qt-rust"
version = "0.1.0"
edition = "2021"
authors = ["revival0728"]

[dependencies]
serde_json = { version = "1.0.138", default-features = false, features = [ "alloc"] }
serde = { version = "1.0.217", default-features = false, features = ["derive", "alloc"] }
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }

[lib]
path = "src/wasm_lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
strip = true
opt-level = "s"
lto = true
